# ChangeLog for dev-libs/libpwquality
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpwquality/ChangeLog,v 1.18 2014/11/04 20:25:46 maekke Exp $

  04 Nov 2014; Markus Meier <maekke@gentoo.org> libpwquality-1.2.3.ebuild:
  arm stable, bug #527672

*libpwquality-1.2.4 (02 Nov 2014)

  02 Nov 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +libpwquality-1.2.4.ebuild:
  Version bump.

  01 Nov 2014; Mike Frysinger <vapier@gentoo.org> libpwquality-1.2.3.ebuild:
  Add s390/sh love #527672.

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -libpwquality-1.2.0-r2.ebuild:
  drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> libpwquality-1.2.3.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> libpwquality-1.2.3.ebuild:
  amd64 stable, bug #478252

*libpwquality-1.2.3 (15 Nov 2013)

  15 Nov 2013; Gilles Dartiguelongue <eva@gentoo.org>
  +libpwquality-1.2.3.ebuild:
  Version bump.

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -libpwquality-1.2.0-r1.ebuild:
  Clean up old revision.

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libpwquality-1.2.0-r2.ebuild:
  Add ~arm, wrt bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libpwquality-1.2.0-r2.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libpwquality-1.2.0-r2.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libpwquality-1.2.0-r2.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> libpwquality-1.2.0-r2.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> libpwquality-1.2.0-r2.ebuild:
  Add ~ppc, wrt bug #449220

*libpwquality-1.2.0-r2 (29 Dec 2012)

  29 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -libpwquality-1.2.0.ebuild, +libpwquality-1.2.0-r2.ebuild:
  Do not install static library in /lib (bug #449224, thanks to BillWho).