@@ -3,14 +3,14 @@ Hash: SHA256
 
 DIST libpwquality-1.2.3.tar.bz2 367794 SHA256 b11c79ce7b03cdf878fccb653e67bd430155cc6fd224efbbb3e78842f752516a SHA512 1591f40feee4ad95d666887fbd04fc675ff2630a2cd080a7ef616f59af543751ef34910a085d880e8d75051ebeee747847b8015e66a7c315b955df62f926ccd2 WHIRLPOOL 9aff4c547758a2bc2d918f2411371f3b35231c6846d77b497275176842f8f48df3b66f419ddaee88e1fccc2e1a6b947e5b1e72215db74dbc978089d7c0afdf5b
 DIST libpwquality-1.2.4.tar.bz2 394060 SHA256 9ad67be364a66dc8b334a473c77d9f531137ee0e9d85d81f567f410a375857c7 SHA512 63ead296320e8eadc1a3341c28b015f9dbbf30e610e9226a11018d81aeb412d0e211753ebdb45f959c35cedfc6ed580bba9e6b0f8822c3b5f38062428f637049 WHIRLPOOL 94166db5bba425fb19a9a27fe27eb082716e887b90fa2d2bd64e56f4d9202c6cc1f7f16779185a5c44ce3145f8a8df92ecca9b6628ae63daba99aca4d5a9c1a9
-EBUILD libpwquality-1.2.3.ebuild 2010 SHA256 3930202585ee50d5f47470d2a8dcf988f654e7e20738a794dbf0dffa326fddcb SHA512 7ad0a0e66f2c045a283f92ec47058d8d206e21a913687b98955ddb06899c9fbf72c571be1fd36c4fa6969dc28ee6d6f5e52625122a2f5ad4fe6a6281d0209bf6 WHIRLPOOL e20ddf16cf9257cc05f953c6adea59412df53145a4e799bdc0c1b7815adf8d3fdcae8643549521c64429fc61e26fae5a1dc9804f79f34b41a9f8ee2200b96d17
-EBUILD libpwquality-1.2.4.ebuild 2022 SHA256 858b53f25079cb0d21258c42f9c4e0511b232466821763b2caa91ad69de1fdf9 SHA512 6e73526b5bdf8954914a3d16ff911f9f3f08725550811752c7ded8b6c3d785edd11a5b740bd5b7491bb4489fded4e3bcc54c8fbe9f688065389d3ac4409cd434 WHIRLPOOL 0d18d46080fd5b9fa547bcbfdcae351cb6454ed0870130503a705b34ff36339c832b0fd1541dbe5b546bd67e30fe0bdf8a345502d0d5efe53c4b3109b68fa47b
-MISC ChangeLog 2630 SHA256 0892f3e3899e205a873286ea108e1198e9f3539266ec5384e85b39ce27f1966d SHA512 ffa36a22d83f5b68ce0836f4fe5077a4dcabd6f759b65101ca4257210720dbd6696c6e678c7dac11541e70edd78eaa753e99173b5cea7eade018701f7df576ba WHIRLPOOL cb24913694dac9e4a6a2958b2987eb0be4a3f82782b3287e6fa590e1dac28ed8d4bb2e00118a0fae123e6e656cf302804c85cffa5d9c0498ef873cf82c2a4e5f
+EBUILD libpwquality-1.2.3.ebuild 2012 SHA256 6e74469b7011073838cafc4f81d9d622206c32f81e5f1dff4f589d691568b450 SHA512 fcd26467fbf90600b2376aa3ec9b5d3092076b3a66e1625f9a377675a9ac95e7e8bf3da710fc425ffe17b22dd535b64afab2b1528a53e0f3ae66bba3af563eb7 WHIRLPOOL a2792abcf459a307da1e5f0d17b96bebe31a4402b5529fa9e5e3352e359f438c9cfa43772f9d22621de38c943d5f0026b01f2bfce3349b74418b47a8814d5bd5
+EBUILD libpwquality-1.2.4.ebuild 2028 SHA256 fdea19d918a0a4019f6bc3092ce571d80e7f4cde7483c5bbc2c88175239a1088 SHA512 4e437cbe85f76796da59b2770c0c4cfb24e996b75aecf4eff93792243af2d353493bf2c78085378c4dabe263724eb7b38a9b22d2d0d0e3755462f6d8db1d43a2 WHIRLPOOL a215aa7150761cd52c79d2e2bed149950feffc76db047f838d773b8c2cd45b3e376f1e0a78939754b24e506f9aef159416fb4866aade8ba297ad0c462204ba89
+MISC ChangeLog 2764 SHA256 4a0cf4f50bc3cee27fc98f224d814dc5e0213d7da254abae9b2ca33d65b6e7a1 SHA512 f4392c685eea873e6dc5b06e981b655d47c31500fee79406361ef8a5d37fbf6886b818cbb5bf35f43de1f64dc073fb703e7adbf79a2fe7bfcd6ddf669a2d2697 WHIRLPOOL e13a965acbba9e3474ed87abfcb627d4696f32a6b809e32dd09a94c458f126f18cbff296f6a9899f76bb6ef236116b3659945cb354ca97fd2619d2c84f27c8ac
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRZNkwACgkQkKaRLQcq0GInyACaAnLbNu9qZlBRY05NZx8cDJE1
-8iAAoKEgsWI6pkFcmz5EAQZZNsd9pNjW
-=x90j
+iEYEAREIAAYFAlRqcsoACgkQVWmRsqeSphP7bQCfXssd8syeGxzieIlHx4hwZufN
++RMAnixaRY0d/bak95wi6hN/cWF3bXta
+=11Ct
 -----END PGP SIGNATURE-----
