@@ -4,10 +4,10 @@ DESCRIPTION=Library for password quality checking and generating random password
 EAPI=5
 HOMEPAGE=https://fedorahosted.org/libpwquality/
 IUSE=pam python static-libs python_targets_python2_7
-KEYWORDS=~alpha amd64 arm ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc x86
+KEYWORDS=~alpha amd64 arm hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc x86
 LICENSE=|| ( BSD GPL-2 )
 RDEPEND=>=sys-libs/cracklib-2.8:= pam? ( virtual/pam ) python? ( python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] )
 SLOT=0
 SRC_URI=https://fedorahosted.org/releases/l/i/libpwquality/libpwquality-1.2.3.tar.bz2
 _eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	multibuild	ddc59d206214ef1c240093e1bb2513cf	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	python-r1	fef838277e0f17df29d4951b7183d1b4	python-utils-r1	fa6c2a74651117877e00388c61d6ef99	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=7c1c399c57bf73a73a94fed1ba2f74bb
+_md5_=ebc01082ee75d37478af7366cd80b177
